	mono.
2017-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libsamplerate-0.dll' to the 'make winstall-win32' target.
	* Added 'libsamplerate-0.dll' to the set of installed DLLs in
	'rivendell-browser.nsi.in'.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default error message in
	'src/common/streamplayer_alsa.cpp' and
	'src/common/streamplayer_mme.cpp' to 'No audio available'.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/cartfilterwidget.cpp' that caused
	the 'Clear' button to be disabled after executing a search.
2017-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Include "ALL" in Filter Group' control to
	rdadminb(1).
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Increased the size of the data preload in
	'src/common/streamplayer_alsa.cpp'.
	* Disabled direct cart-to-cart playing in
	'src/rdlibraryb/rdlibraryb.cpp'.
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/streamplayer_alsa.cpp' that broke the
	build under MinGW.
	* Fixed a bug in streamplayer.cpp' that caused clicks and pops
	when playing WAV files without WAVEFORMATEX extensions.
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Reenabled direct cart-to-cart playing for MME devices.
2017-03-02 Fred Gleason <fredg@paravelsystems.com>
	* Commented out debugging printfs.
	* Reenabled direct cart-to-cart playing for ALSA devices.
2017-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/common/config.cpp' to set focus automatically
	to first blank field on the Login dialog.
2017-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2017-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Updated calls to the rivendell-c-api to include the 'ticket'
	parameter.
2017-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Consolidated all rivendell-c-api calls under methods of 'Config'.